--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -12,10 +12,11 @@
             background-position:center center;
             background-repeat: no-repeat;
             background-size:cover;
+            background-attachment: fixed;
         } 
         main{
             background-color:white;
-            width:400px;
+            max-width:700px;
             padding:10px;
             margin:auto;
             border:1px solid darkblue;
